# Pickup-Lang

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LIMITATIONS.md  README.md  RELEASE.md  SUMMARY.md  docs.txt  grammar.pest
.github/workflows/: ci.yml  nightly-release.yml  release.yml
examples/: advanced.up  arrays.up  basic.up  complete_demo.up  comprehensive.up  conditionals.up  control_flow.up  functions.up  loops.up  modules.up  stdlib.up
src/: ast.rs  cli.rs  compiler.rs  interpreter.rs  lib.rs  main.rs  parser.rs  repl.rs  stdlib.rs
tests/: integration_tests.rs
