[package]
name = "pickup-lang"
version = "0.2.0"
edition = "2021"
authors = ["Aidan Ahern"]
description = "Pickup: A production-ready, Lua-inspired scripting language with comprehensive standard library"
license = "MIT"

[lib]
name = "pickup_lang"
path = "src/lib.rs"

[[bin]]
name = "pick"
path = "src/main.rs"

[dependencies]
# Parsing
pest = "2.4"
pest_derive = "2.4"
# REPL
rustyline = "11.0"
# Error handling
thiserror = "1.0"
# JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Regex for pattern matching
regex = "1.10"
# Base64 encoding/decoding
base64 = "0.21"
# Date/time support
chrono = "0.4"