[package]
name = "pickup-lang"
version = "0.2.0"
edition = "2021"
authors = ["Aidan Ahern"]
description = "Pickup: A production-ready, Lua-inspired scripting language with comprehensive standard library"
license = "MIT"

[lib]
name = "pickup_lang"
path = "src/lib.rs"

[[bin]]
name = "pick"
path = "src/main.rs"

[dependencies]
# Parsing
pest = "2.4"
pest_derive = "2.4"
# REPL
rustyline = "11.0"
# Error handling
thiserror = "1.0"
# JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }
# Regex for pattern matching
regex = "1.10"
# Base64 encoding/decoding
base64 = "0.21"
# Date/time support
chrono = "0.4"
# Cryptographic hashing
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
hmac = "0.12"
# UUID generation
uuid = { version = "1.6", features = ["v4"] }
# Random number generation
rand = "0.8"
# HTTP client
ureq = { version = "2.9", features = ["json"] }
# CSV parsing
csv = "1.3"
# File globbing
glob = "0.3"
# Directory walking
walkdir = "2.4"
# URL parsing
url = "2.5"
# URL encoding
percent-encoding = "2.3"